<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/item_card_view"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/locationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:hint="@string/nairobi_kenya"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/dateTimeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/web_23_march_2022"
            android:gravity="center"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/degreeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/temp_color"
            android:textSize="36sp"
            android:hint="@string/_25_u2103"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/wind_speed_4_2_fpm"
            android:gravity="center"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:text="@string/weather_update" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:hint="@string/weather_update" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>